--- a/style.css
+++ b/style.css
@@ -40,7 +40,11 @@
 body {
   display: flex;
   flex-flow: column nowrap;
-  gap: var(--size-300);
+  gap: var(--size-700);
+}
+
+main {
+  padding: 0 0 var(--size-300) 0;
 }
 
 footer {
@@ -149,6 +153,11 @@ h3 {
 }
 
 @media (min-width: 963px) {
+  [data-menu-toggle-icon],
+  [data-menu-toggle] {
+    display: none;
+  }
+  
   [data-menu-list] {
     display: flex;
     gap: var(--size-400);
@@ -251,9 +260,8 @@ button {
   gap: var(--size-200);
   background-color: var(--clr-neutral-400);
   color: var(--clr-neutral-200);
-  padding: var(--size-200) var(--size-100);
+  padding: var(--size-300) var(--size-100);
   min-height: 400px;
-  align-self: flex-start;
 }
 
 .news h2 {
@@ -265,15 +273,12 @@ button {
 }
 
 .news > :not(:first-child) {
-  flex: 1;
+ padding-block-end: var(--size-400);
   display: flex;
   justify-content: center;
   flex-flow: column;
   gap: calc(var(--size-100) * 0.4);
-}
-
-.news > :first-child {
-  justify-content: flex-end;
+  line-height: 1.75;
 }
 
 .news > :not(:last-child, :first-child) {
